--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
         <judo-meta-measure-version>1.0.2.20230905_075010_247af91a_develop</judo-meta-measure-version>
         <judo-meta-liquibase-version>1.0.2.20230905_074943_fa8710f0_develop</judo-meta-liquibase-version>
         <judo-meta-query-version>1.0.3.20230905_074937_387c6885_develop</judo-meta-query-version>
-        <judo-dao-api-version>1.0.4-SNAPSHOT</judo-dao-api-version>
+        <judo-dao-api-version>1.0.4.20230906_120103_5650c711_feature_JNG_5145_allow_db_write_for_getrangeof</judo-dao-api-version>
         <judo-sdk-common-version>1.0.4.20230905_075749_d2ac86ab_develop</judo-sdk-common-version>
         <judo-dispatcher-api-version>1.0.3.20230826_230134_1ce94d88_develop</judo-dispatcher-api-version>
         <judo-operation-utils-version>1.1.3.20230905_075751_08f72386_develop</judo-operation-utils-version>
