--- a/judo-runtime-core-spring/pom.xml
+++ b/judo-runtime-core-spring/pom.xml
@@ -83,6 +83,11 @@
 
         <dependency>
             <groupId>hu.blackbelt.judo.runtime</groupId>
+            <artifactId>judo-runtime-core-export</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>hu.blackbelt.judo.runtime</groupId>
             <artifactId>judo-runtime-core-accessmanager-api</artifactId>
         </dependency>
 
