--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
         <judo-dispatcher-api-version>1.0.3.20230826_230134_1ce94d88_develop</judo-dispatcher-api-version>
         <judo-operation-utils-version>1.1.3-SNAPSHOT</judo-operation-utils-version>
 
-        <structured-map-proxy-version>2.0.0.20231116_124444_3c719f49_develop</structured-map-proxy-version>
+        <structured-map-proxy-version>2.0.0-SNAPSHOT</structured-map-proxy-version>
 
         <judo-tatami-base-version>1.1.6-SNAPSHOT</judo-tatami-base-version>
 
