--- a/pom.xml
+++ b/pom.xml
@@ -108,14 +108,6 @@
             <url>https://www.eclipse.org/org/documents/epl-2.0/EPL-2.0.txt</url>
         </license>
     </licenses>
-	<!--
-    <repositories>
-        <repository>
-            <id>ecentral</id>
-            <url>https://raw.githubusercontent.com/jmini/ecentral/HEAD/repo</url>
-        </repository>
-    </repositories>
-	-->
     <build>
         <pluginManagement>
             <plugins>
@@ -529,6 +521,7 @@
                 <module>judo-runtime-core-accessmanager-api</module>
                 <module>judo-runtime-core-accessmanager</module>
                 <module>judo-runtime-core-security</module>
+                <module>judo-runtime-core-export-jxls</module>
                 <module>judo-runtime-core-guice</module>
                 <module>judo-runtime-core-guice-hsqldb</module>
                 <module>judo-runtime-core-guice-postgresql</module>
@@ -536,7 +529,6 @@
                 <module>judo-runtime-core-spring</module>
                 <module>judo-runtime-core-spring-hsqldb</module>
                 <module>judo-runtime-core-spring-postgresql</module>
-
             </modules>
         </profile>
 
@@ -755,9 +747,9 @@
                                 <phase>process-sources</phase>
                                 <configuration>
                                     <licenseName>epl_v2</licenseName>
-									<excludes>
-										<exclude>**/*.json</exclude>
-									</excludes>
+                                    <excludes>
+                                        <exclude>**/*.json</exclude>
+                                    </excludes>
                                 </configuration>
                             </execution>
                             <execution>
